SAK-33595 Java 11